@@ -3,6 +3,9 @@ eZ Online Editor MCE extension Changelog
 5.0Beta3
 * Fixed bug #012989: Add a loading icon while system is searching (Insert image popup)
 * added image preview in search and browse view
+* Fixed bug #010888: table caption can't be added though required by WAI level 3
+* added support for int / number / email custom attribute types
+* added support for custom attribute validation (on email, text, int and number)
 
 5.0Beta2
 * Added debug as text comment in ajax view's (embed_view, expand, load and search)
